Feature/iay rydd (#5605)
Sletter ubrukt kode, iay im